--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 .nav-bar{
     display: flex;
     align-items: center;
-    background-color: pink;
+    background-color: rgb(206, 112, 127);
     padding: 20px;
 }
 .logo{
@@ -23,14 +23,53 @@
 .heading-size{
     display: flex;
     flex-direction: column;
-
+    line-height: 0.7;
+    margin-top: 50px;
+    margin-left: 75px;
+}
+.hero-page{
+    display: flex;
 }
 .first-h{
     font-size: 80px;
 }
 .sec-h{
-    font-size: 150px;
+    font-size: 170px;
+    font-weight: 800;
+    color: rgb(232, 30, 30);
 }
 .third-h{
     font-size: 80px;
+    padding-left: 170px;
+} 
+.hero-text{
+    width: 550px;
+    margin-left: 75px;
+    margin-top: 50px;
+}
+.hero-text-design{
+    color: gray;
+}
+.buttons{
+    padding-left: 75px;
+    padding-top: 50px;
+}
+.red-button{
+    background-color: rgb(232, 30, 30);
+    color: white;
+    border-color:  rgb(232, 30, 30);
+    border-radius: 30px;
+    width: 206px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin-right: 20px;
+}
+.black-button{
+    background-color: black;
+    color: white;
+    border-color: black;
+    border-radius: 30px;
+    width: 150px;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
