--- a/style.css
+++ b/style.css
@@ -55,6 +55,9 @@
     padding-left: 150px;
     padding-top: 50px;
 }
+.button-text-size{
+    font-size: smaller;
+}
 .red-button{
     background-color:#C92A11;
     color: white;
@@ -65,6 +68,11 @@
     padding-bottom: 15px;
     margin-right: 20px;
 }
+.red-button:hover{
+    background-color: black;
+    border-color: black;
+    transition-duration: 0.5s;
+}
 .black-button{
     background-color: black;
     color: white;
@@ -73,6 +81,11 @@
     width: 150px;
     padding-top: 15px;
     padding-bottom: 15px;
+}
+.black-button:hover{
+    background-color: #C92A11;
+    border-color: #C92A11;
+    transition-duration: 0.5s;
 }
 .hero-pic{
     padding-top: 50px;
