--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@
 .burger-div:hover{
     background-color: #FFB936;
     /* transition-timing-function: ease-in-out; */
-    transition : 1s ease-in;
+    transition : 0.7s ease-in;
 }
 .burger-pic{
     width: 220px;
@@ -164,7 +164,7 @@
 .fries-div:hover{
     background-color: #FFB936;
     /* transition-timing-function: ease-in-out; */
-    transition : 1s ease-in;
+    transition : 0.7s ease-in;
 }
 .fries-pic{
     width: 220px;
@@ -185,6 +185,82 @@
     margin-top: 50px;
 }
 .fries-text-sec{
+    color: #C92A11;
+    font-size: small;
+    font-weight: 100;
+    margin-top: 10px;
+    margin-left: 100px;
+}
+/* Pasta */
+.pasta-div{
+    background-color: white;
+    width: 300px;
+    height: 500px;
+    margin-top: 50px;
+    border-radius: 10px;
+}
+.pasta-div:hover{
+    background-color: #FFB936;
+    /* transition-timing-function: ease-in-out; */
+    transition : 0.7s ease-in;
+}
+.pasta-pic{
+    width: 220px;
+    padding-left: 35px;
+    padding-top: 30px;
+}
+.pasta-line{
+    background-color: #C92A11;
+    width: 80px;
+    height: 3px;
+    margin-left: 115px;
+    margin-top: 50px;
+}
+.pasta-text{
+    font-size: 30px;
+    font-weight: 400;
+    margin-left: 80px;
+    margin-top: 50px;
+}
+.pasta-text-sec{
+    color: #C92A11;
+    font-size: small;
+    font-weight: 100;
+    margin-top: 10px;
+    margin-left: 100px;
+}
+/* Pizza */
+.pizza-div{
+    background-color: white;
+    width: 300px;
+    height: 500px;
+    margin-top: 50px;
+    border-radius: 10px;
+}
+.pizza-div:hover{
+    background-color: #FFB936;
+    /* transition-timing-function: ease-in-out; */
+    transition : 0.7s ease-in;
+}
+.pizza-pic{
+    width: 250px;
+    padding-left: 35px;
+    padding-top: 30px;
+}
+.pizza-line{
+    background-color: #C92A11;
+    width: 80px;
+    height: 3px;
+    margin-left: 115px;
+    margin-top: 40px;
+}
+.pizza-text{
+    font-size: 30px;
+    font-weight: 400;
+    margin-left: 80px;
+    margin-top: 50px;
+}
+.pizza-text-sec{
     color: #C92A11;
     font-size: small;
     font-weight: 100;
