--- a/style.css
+++ b/style.css
@@ -625,7 +625,7 @@
     padding: 10px 0;
 }
 .boxes{
-    height: 800px;
+    height: 700px;
     background-color: #F4F1EA;
     padding-top: 50px;
 }
@@ -734,4 +734,59 @@
     gap: 90px;
     justify-content: center;
     margin-top: 70px;
+}
+.ending{
+    height: 800px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
+}
+.delivery-box{
+    width: 1200px;
+    height: 500px;
+    background-color: #00813E;
+    border-radius: 20px;
+    display: flex;
+}
+.delivery-box-texts{
+    display: flex;
+    flex-direction: column;
+}
+.delivery-box-text{
+    color: #FFB936;
+    font-size: 15px;
+    padding-top: 100px;
+    padding-left: 70px;
+}
+.delivery-box-sec-text{
+    color: white;
+    font-size: 50px;
+    padding-top: 20px;
+    padding-left: 70px;
+}
+.delivery-box-third-text{
+    color: white;
+    font-size: 50px;
+    padding-top: 20px;
+    padding-left: 70px;
+}
+.delivery-box-third-text-in{
+    color: #FFB936;
+    font-size: 50px;
+}
+.delivery-button{
+    width: 200px;
+    height: 60px;
+    border-radius: 10px;
+    border: 0px;
+    margin-top: 30px;
+    margin-left: 70px;
+}
+.delivery-button-text{
+    font-size: 12px;
+    margin-left: 50px;
+}
+.delivery-box-pic{
+    padding-left: 50px;
 }
